--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,12 @@
             <artifactId>angus-mail</artifactId>
             <version>2.0.2</version>
         </dependency>
+        <dependency>
+            <groupId>com.sendgrid</groupId>
+            <artifactId>sendgrid-java</artifactId>
+            <version>4.10.3</version>
+        </dependency>
+
     </dependencies>
     
     <build>
